--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\".t # 'Art Vandelay'"
+    "\"art vandelay\".title() # 'Art Vandelay'"
    ]
   },
   {
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".upper() # 'CEO'"
    ]
   },
   {
